--- a/Share Beauty App/Views/LifeStyleFourthProductView.xib
+++ b/Share Beauty App/Views/LifeStyleFourthProductView.xib
@@ -90,7 +90,7 @@
                                 <constraint firstAttribute="width" constant="238" id="Mt9-P5-z3Z"/>
                                 <constraint firstAttribute="height" constant="25" id="fOi-Ho-6jf"/>
                             </constraints>
-                            <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                            <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="24"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
