--- a/Share Beauty App/Views/LifeStyleProductView.xib
+++ b/Share Beauty App/Views/LifeStyleProductView.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12118" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -209,8 +209,8 @@
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="h8N-Lb-ltN">
                                     <rect key="frame" x="0.0" y="0.0" width="310" height="181"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="none" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gbd-r7-wwo">
-                                            <rect key="frame" x="20" y="20" width="0.0" height="0.0"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="none" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gbd-r7-wwo">
+                                            <rect key="frame" x="20" y="20" width="0.0" height="300"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -219,7 +219,6 @@
                                     <constraints>
                                         <constraint firstItem="gbd-r7-wwo" firstAttribute="leading" secondItem="h8N-Lb-ltN" secondAttribute="leading" constant="20" id="PKP-8G-agi"/>
                                         <constraint firstItem="gbd-r7-wwo" firstAttribute="top" secondItem="h8N-Lb-ltN" secondAttribute="top" constant="20" id="RKn-xv-DQs"/>
-                                        <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="gbd-r7-wwo" secondAttribute="bottom" constant="20" id="mzG-we-Iv5"/>
                                         <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="gbd-r7-wwo" secondAttribute="trailing" constant="20" id="yge-im-iN4"/>
                                     </constraints>
                                 </view>
