--- a/Share Beauty App/Base.lproj/ProductDetailViewController.storyboard
+++ b/Share Beauty App/Base.lproj/ProductDetailViewController.storyboard
@@ -1,11 +1,11 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="ipad9_7" orientation="landscape">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -793,9 +793,11 @@
                         <outlet property="mImgVFirstDailyCare" destination="Mz1-Jh-WaH" id="4cS-35-z5L"/>
                         <outlet property="mImgVProduct" destination="H4D-Kx-hbY" id="BZB-as-eMy"/>
                         <outlet property="mImgVSecondDailyCare" destination="1aa-P5-gd4" id="cxk-U3-TiM"/>
+                        <outlet property="mItemColorVariation" destination="sAJ-7O-ICs" id="HyC-DT-zyE"/>
                         <outlet property="mItemDailyCare" destination="zfD-RI-NXu" id="fPi-iY-qKM"/>
                         <outlet property="mItemFeature" destination="XA5-xa-1xC" id="a3m-gZ-LPe"/>
                         <outlet property="mItemHowToUse" destination="RMe-9z-Tji" id="uK3-jM-20X"/>
+                        <outlet property="mItemSkinConcern" destination="Z3l-C7-hXm" id="hEd-wj-Qb9"/>
                         <outlet property="mLblBeautyName" destination="Iyt-T5-OWT" id="B2C-Pe-aVl"/>
                         <outlet property="mLblFeature" destination="PXN-On-kxw" id="mya-ED-58P"/>
                         <outlet property="mLblHowToUse" destination="wsZ-Cy-zqz" id="ER0-aZ-mSH"/>
